# Tengine-lite

./: CMakeLists.txt  readme.md
include/: sys_port.h  tengine_log.h
